tests/ui/crashes/ice-3891.stderr
error: invalid suffix `x` for number literal
  --> $DIR/ice-3891.rs:2:5
   |
LL |     1x;
   |     ^^ invalid suffix `x`
   |
   = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)

error: aborting due to previous error

